Fixed how it looks on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   padding: 15px;
   text-align: center;
   background-color: hsl(0, 0%, 95%);
